cmake_minimum_required(VERSION 3.8)
project(bumperbot_localization)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)

include_directories(include)

add_executable(kalman_filter
  src/kalman_filter.cpp
)
ament_target_dependencies(kalman_filter
  nav_msgs
  rclcpp
  sensor_msgs
)

# IMU republisher (for robot_localization)
add_executable(imu_republisher
  src/imu_republisher.cpp
)
ament_target_dependencies(imu_republisher
  rclcpp
  sensor_msgs
)

install(
  DIRECTORY
    include
  DESTINATION
    include
)

install(
  TARGETS
    imu_republisher
    kalman_filter
  DESTINATION
    lib/${PROJECT_NAME}
)

# Install launch and config folders
install(
  DIRECTORY
    launch
    config
  DESTINATION
    share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
